--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lorecraftui",
+  "name": "lore-client",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "",
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "himalaya": "^1.0.0",
     "vue": "^2.5.2"
   },
   "devDependencies": {
