--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "raven-js": "^3.22.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
